--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="6Ia-rs-lS9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="GVT-7Q-LHp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -86,8 +86,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="VKy-pp-N1W" firstAttribute="top" secondItem="3" secondAttribute="top" constant="-1" id="3vw-y5-Glh"/>
-                            <constraint firstAttribute="bottom" secondItem="VKy-pp-N1W" secondAttribute="bottom" constant="1" id="9Ab-Jw-Yi1"/>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="8aN-u8-2oh"/>
+                            <constraint firstItem="VKy-pp-N1W" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="BMR-eP-gUN"/>
                             <constraint firstItem="VKy-pp-N1W" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="YeP-1a-lLL"/>
                             <constraint firstItem="VKy-pp-N1W" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="r56-pW-sqb"/>
                         </constraints>
@@ -103,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8" y="-833"/>
+            <point key="canvasLocation" x="-120" y="-1169"/>
         </scene>
         <!--Results View Controller - Results-->
         <scene sceneID="Lii-SO-gyX">
@@ -160,7 +160,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f9R-iM-n6I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="559" y="-833"/>
+            <point key="canvasLocation" x="431" y="-1169"/>
         </scene>
         <!--Building View Controller - Search-->
         <scene sceneID="uac-rp-B92">
@@ -208,7 +208,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ks8-Db-olH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8" y="12"/>
+            <point key="canvasLocation" x="-646" y="-380"/>
         </scene>
         <!--Building Image View Controller-->
         <scene sceneID="aky-Vq-ZB4">
@@ -235,7 +235,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ot8-Qz-Ha3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="559" y="12"/>
+            <point key="canvasLocation" x="-103" y="-380"/>
         </scene>
         <!--Result Detail View Controller-->
         <scene sceneID="dAz-kP-It7">
@@ -309,105 +309,66 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TT0-fL-0Nl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1061" y="-833"/>
+            <point key="canvasLocation" x="933" y="-1169"/>
         </scene>
         <!--Navigation Controller - Item-->
-        <scene sceneID="mqh-Ps-kdM">
+        <scene sceneID="Bfn-mg-j4Y">
             <objects>
-                <navigationController id="qf3-To-xpT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="2iW-Wx-yPx"/>
+                <navigationController id="UXu-9D-pvy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="76y-l8-wJJ"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8oD-wa-hSE">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TyA-XI-Ic8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="2" kind="relationship" relationship="rootViewController" id="O1Y-8k-mva"/>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="4he-EZ-BQR"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IAc-Vr-X33" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSA-Ez-21L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-510" y="-833"/>
-        </scene>
-        <!--Navigation Controller - Item-->
-        <scene sceneID="X4K-lw-T2d">
-            <objects>
-                <navigationController id="5Va-ab-Uer" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="rCb-yJ-1ug"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uru-Ec-kuO">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="FZ5-QZ-oAu" kind="relationship" relationship="rootViewController" id="pW8-fb-Jn6"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sMZ-my-Jpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-510" y="12"/>
+            <point key="canvasLocation" x="-646" y="-1169"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="hIz-aV-n5W">
+        <scene sceneID="hYa-36-9jR">
             <objects>
-                <tabBarController id="6Ia-rs-lS9" sceneMemberID="viewController">
+                <tabBarController id="GVT-7Q-LHp" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="DFF-1i-BWC">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="cm6-VY-j44">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="qf3-To-xpT" kind="relationship" relationship="viewControllers" id="oHf-yo-SL6"/>
-                        <segue destination="5Va-ab-Uer" kind="relationship" relationship="viewControllers" id="nuS-7G-dKO"/>
+                        <segue destination="UXu-9D-pvy" kind="relationship" relationship="viewControllers" id="1Ul-rt-muU"/>
+                        <segue destination="lJk-i8-KfV" kind="relationship" relationship="viewControllers" id="z5x-TW-aVB"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aaw-j7-eXO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YKh-rt-mux" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1236" y="-477"/>
+            <point key="canvasLocation" x="-1172" y="-1169"/>
+        </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="avC-aZ-hA0">
+            <objects>
+                <navigationController id="lJk-i8-KfV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="LHI-nn-dve"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="njv-yB-U7h">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FZ5-QZ-oAu" kind="relationship" relationship="rootViewController" id="Kzx-ta-EfY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Zh-8b-Mw9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1172" y="-380"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="BuildingImageViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingImageViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-        <class className="BuildingViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ResultDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ResultDetailViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="ResultsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ResultsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="SearchViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SearchViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="searchPressed:"/>
-                <relationship kind="outlet" name="accessIdField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="firstNameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="lastNameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
